updated otseca.conf - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -1,3 +1,18 @@
 SEARCH_STACK=(\
-  ""
+  "ls /tmp" \
+  "uname -a" \
+  "hostname -f" \
+  "ps -ef" \
+  "ifconfig -a" \
+  "iwconfig" \
+  "netstat -tunap" \
+  "netstat -rn" \
+  "df -H" \
+  "mount" \
+  "lsof -nP" \
+  "chkconfig --list" \
+  "service --status-all" \
+  "systemctl list-units" \
+  "lsmod" \
+  "lspci" \
   )
