updated otseca.conf - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -10,8 +10,20 @@ SEARCH_STACK=(\
   "df -H" \
   "mount" \
   "lsof -nP" \
+  # "chkconfig --list" \
   "service --status-all" \
   "systemctl list-units" \
   "lsmod" \
   "lspci" \
+  # "apparmor_status" \
+  "sysctl -a" \
+  "iptables -nL -v" \
+  "iptables -nL -v -t nat" \
+  "iptables -S" \
+  "echo $PATH" \
+  "ls -l /etc/rc*.d" \
+  "cat /proc/cpuinfo" \
+  "ntpq -p" \
+  "lsb_release -a" \
+  # "exportfs" \
   )
