otseca config: BASE_STACK and NETWORK_STACK - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -1,29 +1,29 @@
-SEARCH_STACK=(\
+BASE_STACK=(\
   "ls /tmp" \
   "uname -a" \
-  "hostname -f" \
   "ps -ef" \
-  "ifconfig -a" \
-  "iwconfig" \
-  "netstat -tunap" \
-  "netstat -rn" \
   "df -H" \
   "mount" \
-  "lsof -nP" \
-  # "chkconfig --list" \
   "service --status-all" \
   "systemctl list-units" \
   "lsmod" \
   "lspci" \
-  # "apparmor_status" \
   "sysctl -a" \
-  "iptables -nL -v" \
-  "iptables -nL -v -t nat" \
-  "iptables -S" \
   "echo $PATH" \
   "ls -l /etc/rc*.d" \
   "cat /proc/cpuinfo" \
   "ntpq -p" \
   "lsb_release -a" \
-  # "exportfs" \
+  )
+
+NETWORK_STACK=(\
+  "hostname -f" \
+  "ifconfig -a" \
+  "iwconfig" \
+  "netstat -tunap" \
+  "netstat -rn" \
+  "lsof -ni"
+  "iptables -nL -v" \
+  "iptables -nL -v -t nat" \
+  "iptables -S" \
   )
