minor fixes - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -9,7 +9,7 @@ BASE_STACK=(\
   "lsmod" \
   "lspci" \
   "sysctl -a" \
-  "echo $PATH" \
+  "echo \$PATH" \
   "ls -l /etc/rc*.d" \
   "cat /proc/cpuinfo" \
   "ntpq -p" \
