otseca.conf: added new tasks - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -1,20 +1,186 @@
-BASE_STACK=(\
-  "ls /tmp" \
+###############################################################################
+############################### SYSTEM STACK ##################################
+###############################################################################
+
+# It contains tasks related directly to the system.
+
+SYSTEM_STACK=(\
   "uname -a" \
+  "echo \$PATH" \
+  "lsb_release -a" \
+  "cat /proc/cpuinfo" \
   "ps -ef" \
-  "df -H" \
-  "mount" \
+  "ps -efZ" \
+  "ps -eZ | egrep \"initrc\" | egrep -vw \"tr|ps|egrep|bash|awk\" | tr ':' ' ' | awk '{ print $NF }'"
   "service --status-all" \
   "systemctl list-units" \
+  "sysctl -a" \
   "lsmod" \
   "lspci" \
-  "sysctl -a" \
-  "echo \$PATH" \
-  "ls -l /etc/rc*.d" \
-  "cat /proc/cpuinfo" \
-  "ntpq -p" \
-  "lsb_release -a" \
+  "df -H" \
+  "mount" \
+  "sestatus" \
   )
+
+###############################################################################
+################################# FS STACK ####################################
+###############################################################################
+
+# It contains tasks related directly to the filesystem (files/directories).
+
+FS_STACK=(\
+  "ls /tmp" \
+  "ls -l /etc/rc*.d" \
+  "cat /etc/ftpusers" \
+  "cat /etc/hosts.equiv" \
+  "cat /etc/hosts.deny" \
+  "cat /etc/syslog-ng/syslog-ng.conf" \
+  "cat /etc/hosts.allow" \
+  "cat /etc/shosts.equiv" \
+  "cat /etc/hosts.lpd" \
+  "cat /etc/at.allow" \
+  "cat /etc/at.deny" \
+  "cat /etc/cron.allow" \
+  "cat /etc/cron.deny" \
+  "cat /etc/securetty" \
+  "cat /etc/ntp.conf" \
+  "cat /etc/lilo.conf" \
+  "cat /boot/grub/menu.lst" \
+  "cat /etc/grub.conf" \
+  "cat /boot/grub/grub.cfg" \
+  "cat /boot/grub2/grub.cfg" \
+  "cat /boot/grub2/grub.conf" \
+  "cat /boot/grub2/grub.cfg" \
+  "cat /etc/login.defs" \
+  "cat /etc/yum.conf" \
+  "cat /etc/xinetd.conf" \
+  "cat /etinetd.conf" \
+  "cat /etc/ssh/ssh_config" \
+  "cat /etc/ssh/sshd_config" \
+  "cat /etc/rc.status" \
+  "cat /etc/inittab" \
+  "cat /etc/fstab" \
+  "cat /etc/chrony.conf" \
+  "cat /etc/sysconfig/chronyd" \
+  "cat /etc/vsftpd.conf" \
+  "cat /etc/vsftpd/vsftpd.conf" \
+  "cat /etc/audit/audit.rules" \
+  "cat /etc/bashrc" \
+  "cat /etc/profile" \
+  "cat /etc/ftpaccess" \
+  "cat /etc/audit/auditd.conf" \
+  "cat /etc/security/console.perms" \
+  "cat /etc/vsftpd.ftpusers" \
+  "cat /etc/crontab" \
+  "cat /etc/init.d/syslog" \
+  "cat /etc/csh.login" \
+  "cat /etc/bash.bashrc" \
+  "cat /etc/default/useradd" \
+  "cat /etc/permissions.local" \
+  "cat /etc/selinux/config" \
+  "cat /etc/modprobe.conf" \
+  "cat /etc/rsyslog.conf" \
+  "cat /etc/audit/auditd.conf" \
+  "cat /etc/audit/audit.rules" \
+  "cat /etc/sudoers" \
+  "cat /etc/anacrontab" \
+  "cat /etc/ssh/sshd_config" \
+  "cat /etc/pam.d/system-auth" \
+  "cat /etc/pam.d/sshd" \
+  "cat /etc/pam.d/su" \
+  "cat /etc/gdm3/greeter.dconf-defaults" \
+  "cat /etc/issue" \
+  "cat /etc/issue.net" \
+  "cat /etc/motd" \
+  "cat /usr/share/gdm/themes/RHEL/RHEL.xml" \
+  "cat /etc/aide.conf" \
+  "cat /etc/snmp/snmpd.conf" \
+  "cat /etc/sysconfig/SuSEfirewall2" \
+  "cat /etc/logrotate.conf" \
+  "cat /etc/avahi/avahi-daemon.conf" \
+  "cat /etc/exports" \
+  "cat /etc/mail/sendmail.cf" \
+  "cat /etc/gdm/custom.conf" \
+  "cat /etc/gdm/defaults.conf" \
+  "cat /etc/sysctl.conf" \
+  "cat /etc/syslog.conf" \
+  "cat /etc/yum.conf" \
+  "cat /etc/login.defs" \
+  "cat /etc/aide.conf" \
+  "cat /etc/group" \
+  "cat /etc/sudoers" \
+  "cat /etc/libuser.conf" \
+  "cat /etc/default/useradd" \
+  "cat /etc/gdm/custom.conf" \
+  "cat /etc/logwatch/conf/logwatch.conf" \
+  "cat /usr/lib/systemd/system/rescue.service"
+  "cat /usr/lib/systemd/system/emergency.service" \
+  "cat /etc/lvm/lvm.conf" \
+  "cat /etc/init.d/ntp" \
+  "cat /etc/default/rsync" \
+  "cat /etc/cluster/cluster.conf" \
+  "cat /etc/httpd.conf" \
+  "cat /etc/apache.conf" \
+  "cat /etc/apache2.conf" \
+  "cat /etc/httpd/apache.conf" \
+  "cat /usr/local/apache/apache.conf" \
+  "cat /etc/apache/apache.conf" \
+  "cat /etc/apache2/apache.conf" \
+  "cat /usr/local/etc/apache22/apache.conf" \
+  "cat /etc/httpd/conf/apache.conf" \
+  "cat /etc/httpd/apache2.conf" \
+  "cat /usr/local/apache/apache2.conf" \
+  "cat /etc/apache/apache2.conf" \
+  "cat /etc/apache2/apache2.conf" \
+  "cat /usr/local/etc/apache22/apache2.conf" \
+  "cat /etc/httpd/conf/apache2.conf" \
+  "cat /etc/httpd/httpd.conf" \
+  "cat /usr/local/apache/httpd.conf" \
+  "cat /etc/apache/httpd.conf" \
+  "cat /etc/apache2/httpd.conf" \
+  "cat /usr/local/etc/apache22/httpd.conf" \
+  "cat /etc/httpd/conf/httpd.conf" \
+  "cat /etc/apache2/mods-enabled/" \
+  )
+
+###############################################################################
+############################## PERMISSIONS STACK ##############################
+###############################################################################
+
+# It contains tasks related directly to the permissions.
+
+PERMISSIONS_STACK=(\
+  "awk -F: '($2 == \"\") { print $1 }' /etc/shadow" \
+  "awk -F: '($3 == 0 ) { print $1 }' /etc/passwd" \
+  "awk -F: '{print $1 ":" $3 ":" $7}' /etc/passwd" \
+  "find / -perm -04000 -o -perm -02000 -type f | sort" \
+  "find / -type d \( -perm -0002 -a ! -perm -1000 \) 2>/dev/null" \
+  "find / -perm -2 \( -type f -o -type d \) -not -perm -01000 | grep -v \"/proc/*\"" \
+  "df --local -P | awk {'if (NR!=1) print $6'} | xargs -I '{}' find '{}' -xdev -type f -perm -0002" \
+  "find / -nouser -o -nogroup -print" \
+  "ls -laR / 2>/dev/null" \
+  "ls -laRZ /" \
+  "ausearch -m AVC,USER_AVC -sv no" \
+  "getsebool -a " \
+  "ls -ZR /dev/* | grep unlabeled_t" \
+  "find / -ls 2>/dev/null" \
+  )
+
+###############################################################################
+############################## SERVICES STACK #################################
+###############################################################################
+
+# It contains tasks related directly to the system services.
+
+SERVICES_STACK=(\
+  "ntpq -p" \
+  )
+
+###############################################################################
+############################### NETWORK STACK #################################
+###############################################################################
+
+# It contains tasks related directly to the network stack.
 
 NETWORK_STACK=(\
   "hostname -f" \
@@ -26,4 +192,13 @@ NETWORK_STACK=(\
   "iptables -nL -v" \
   "iptables -nL -v -t nat" \
   "iptables -S" \
+  )
+
+###############################################################################
+################################ OTHER STACK ##################################
+###############################################################################
+
+# It contains all other tasks.
+
+OTHER_STACK=(\
   )
