--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -149,18 +149,18 @@ FS_STACK=(\
 # It contains tasks related directly to the permissions.
 
 PERMISSIONS_STACK=(\
-  "awk -F: '($2 == \"\") { print $1 }' /etc/shadow" \
-  "awk -F: '($3 == 0 ) { print $1 }' /etc/passwd" \
-  "awk -F: '{print $1 ":" $3 ":" $7}' /etc/passwd" \
-  "find / -perm -04000 -o -perm -02000 -type f | sort" \
-  "find / -type d \( -perm -0002 -a ! -perm -1000 \) 2>/dev/null" \
-  "find / -nouser -o -nogroup -print" \
-  "ls -laR / 2>/dev/null" \
+  # "awk -F: '($2 == \"\") { print $1 }' /etc/shadow" \
+  # "awk -F: '($3 == 0 ) { print $1 }' /etc/passwd" \
+  # "awk -F: '{print $1 ":" $3 ":" $7}' /etc/passwd" \
+  # "find / -perm -04000 -o -perm -02000 -type f | sort" \
+  # "find / -type d \( -perm -0002 -a ! -perm -1000 \)" \
+  # "find / -nouser -o -nogroup -print" \
+  "ls -laR /" \
   "ls -laRZ /" \
   "ausearch -m AVC,USER_AVC -sv no" \
   "getsebool -a " \
   "ls -ZR /dev/* | grep unlabeled_t" \
-  "find / -ls 2>/dev/null" \
+  "find / -ls" \
 )
 
 ###############################################################################
