--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -150,9 +150,9 @@ FS_STACK=(\
 PERMISSIONS_STACK=(\
   "awk -F: '(\$3 == 0 ) { print \$1 }' /etc/passwd" \
   "awk -F: '{print \$1 \":\" \$3 \":\" \$7}' /etc/passwd" \
-  "find / -perm -04000 -o -perm -02000 -type f | sort" \
-  "find / -type d \( -perm -0002 -a ! -perm -1000 \)" \
-  "find / -nouser -o -nogroup -print" \
+  # "find / -perm -04000 -o -perm -02000 -type f | sort" \
+  # "find / -type d \( -perm -0002 -a ! -perm -1000 \)" \
+  # "find / -nouser -o -nogroup -print" \
   # "ls -laR /" \
   # "ls -laRZ /" \
   # "ausearch -m AVC,USER_AVC -sv no" \
