#4 - minor updates in SYSTEM_STACK, added EXTERNAL_STACK - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -1,22 +1,46 @@
 ###############################################################################
+########################## INCLUDE EXTERNAL STACK #############################
+###############################################################################
+
+# Include your specific config file.
+source "${_etc}/centos-linux.conf"
+
+# Add 'YOUR_STACK' from included config file.
+EXTERNAL_STACK=(\
+  # From centos-linux.conf.
+  "CENTOS_STACK" \
+  # From debian-linux.conf.
+  # "DEBIAN_STACK" \
+)
+
+###############################################################################
 ############################### SYSTEM STACK ##################################
 ###############################################################################
 
 # It contains tasks related directly to the system.
 
 SYSTEM_STACK=(\
+  ### STANDARD ###
   "uname -a" \
   "lsb_release -a" \
   "cat /proc/cpuinfo" \
+  ### PROCESSES ###
   "ps -ef" \
   "ps -efZ" \
+  # Unconfined Daemons.
+  "ps -eZ | egrep \"initrc\" | egrep -vw \"tr|ps|egrep|bash|awk\" | tr ':' ' ' | awk '{ print \$NF }'" \
   "service --status-all" \
   "systemctl list-units" \
+  ### KERNEL ###
   "sysctl -a" \
   "lsmod" \
+  ### HARDWARE ###
   "lspci" \
+  ### DISKS ###
+  "lsblk" \
   "df -H" \
   "mount" \
+  ### SECURITY/HARDENING ###
   "sestatus" \
 )
 
@@ -187,13 +211,4 @@ NETWORK_STACK=(\
   "iptables -nL -v" \
   "iptables -nL -v -t nat" \
   "iptables -S" \
-)
-
-###############################################################################
-################################ OTHER STACK ##################################
-###############################################################################
-
-# It contains all other tasks.
-
-OTHER_STACK=(\
 )
