updated config file for centos - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/centos-linux.conf
+++ b/etc/centos-linux.conf
@@ -7,14 +7,14 @@ CENTOS_STACK=(\
   # Packages integrity.
   "rpm -qVa | awk '\$2 != "c" { print \$0 }'" \
   # Check gpgcheck is activated.
-  "grep gpgcheck /etc/yum.conf" \
-  "grep ^gpgcheck /etc/yum.repos.d/" \
+  "_grep gpgcheck /etc/yum.conf" \
+  "_grep ^gpgcheck /etc/yum.repos.d/" \
   # RedHat GPG Key.
   "rpm -q --queryformat \"%{SUMMARY}\n\" gpg-pubkey" \
   # Check umask.
-  "grep umask /etc/sysconfig/init" \
+  "_grep umask /etc/sysconfig/init" \
   # Check syslog for accept remote.
-  "grep SYSLOGD_OPTIONS /etc/sysconfig/syslog" \
+  "_grep SYSLOGD_OPTIONS /etc/sysconfig/syslog" \
 
   ### SERVICES ###
   "chkconfig --list" \
