--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -4,13 +4,17 @@
 
 # Include your specific config file.
 source "${_etc}/centos-linux.conf"
+source "${_etc}/debian-linux.conf"
 
 # Add 'YOUR_STACK' from included config file.
 EXTERNAL_STACK=(\
+
   # From centos-linux.conf.
-  "CENTOS_STACK" \
+  "${CENTOS_STACK[@]}" \
+
   # From debian-linux.conf.
-  # "DEBIAN_STACK" \
+  "${DEBIAN_STACK[@]}" \
+
 )
 
 ###############################################################################
@@ -20,149 +24,62 @@ EXTERNAL_STACK=(\
 # It contains tasks related directly to the system.
 
 SYSTEM_STACK=(\
+
   ### STANDARD ###
-  "uname -a" \
-  "lsb_release -a" \
-  "cat /proc/cpuinfo" \
+  "_exec uname -a" \
+  "_exec lsb_release -a" \
+  "_exec cat /proc/cpuinfo" \
+
   ### PROCESSES ###
-  "ps -ef" \
-  "ps -efZ" \
-  # Unconfined Daemons.
-  "ps -eZ | egrep \"initrc\" | egrep -vw \"tr|ps|egrep|bash|awk\" | tr ':' ' ' | awk '{ print \$NF }'" \
-  "service --status-all" \
-  "systemctl list-units" \
+  "_exec ps -auxenf" \
+
   ### KERNEL ###
-  "sysctl -a" \
-  "lsmod" \
+  "_sysctl fs.suid_dumpable 1" \
+  "_sysctl kernel.randomize_va_space 0" \
+  "_sysctl net.ipv4.ip_forward 1" \
+  "_sysctl net.ipv4.conf.all.send_redirects 1" \
+  "_sysctl net.ipv4.conf.default.send_redirects 1" \
+  "_sysctl net.ipv4.conf.all.accept_redirects 1" \
+  "_sysctl net.ipv4.conf.default.accept_redirects 1" \
+  "_sysctl net.ipv4.conf.all.accept_source_route 1" \
+  "_sysctl net.ipv4.conf.default.accept_source_route 1" \
+  "_sysctl net.ipv4.conf.all.secure_redirects 1" \
+  "_sysctl net.ipv4.conf.default.secure_redirects 1" \
+  "_sysctl net.ipv4.conf.all.log_martians 1" \
+  "_sysctl net.ipv4.conf.default.log_martians 1" \
+  "_sysctl net.ipv4.icmp_echo_ignore_broadcasts 1" \
+  "_sysctl net.ipv4.icmp_ignore_bogus_error_responses 1" \
+  "_sysctl net.ipv4.conf.all.rp_filter 1" \
+  "_sysctl net.ipv4.conf.default.rp_filter 1" \
+  "_sysctl net.ipv4.tcp_syncookies 1" \
+  "_sysctl net.ipv6.conf.all.accept_ra 1" \
+  "_sysctl net.ipv6.conf.default.accept_ra 1" \
+  "_sysctl net.ipv6.conf.all.accept_redirects 1" \
+  "_sysctl net.ipv6.conf.default.accept_redirects 1" \
+
+  "_exec lsmod" \
+
+  ### BOOTLOADER ###
+  "_grep \"^\s*linux\" /boot/grub/grub.*" \
+
   ### HARDWARE ###
-  "lspci" \
+  "_exec lspci" \
+
   ### DISKS ###
-  "lsblk" \
-  "df -H" \
-  "mount" \
+  "_exec lsblk" \
+  "_exec df -H" \
+  "_exec mount" \
+
   ### SECURITY/HARDENING ###
-  "sestatus" \
-)
+  # SELinux.
+  "_exec sestatus" \
+  # "fgrep \"SELINUX=enforcing\" /etc/selinux/* -R" \
 
-###############################################################################
-################################# FS STACK ####################################
-###############################################################################
-
-# It contains tasks related directly to the filesystem (files/directories).
-
-FS_STACK=(\
-  "ls /tmp" \
-  "ls -l /etc/rc*.d" \
-  "cat /etc/ftpusers" \
-  "cat /etc/hosts.equiv" \
-  "cat /etc/hosts.deny" \
-  "cat /etc/syslog-ng/syslog-ng.conf" \
-  "cat /etc/hosts.allow" \
-  "cat /etc/shosts.equiv" \
-  "cat /etc/hosts.lpd" \
-  "cat /etc/at.allow" \
-  "cat /etc/at.deny" \
-  "cat /etc/cron.allow" \
-  "cat /etc/cron.deny" \
-  "cat /etc/securetty" \
-  "cat /etc/ntp.conf" \
-  "cat /etc/lilo.conf" \
-  "cat /boot/grub/menu.lst" \
-  "cat /etc/grub.conf" \
-  "cat /boot/grub/grub.cfg" \
-  "cat /boot/grub2/grub.cfg" \
-  "cat /boot/grub2/grub.conf" \
-  "cat /boot/grub2/grub.cfg" \
-  "cat /etc/login.defs" \
-  "cat /etc/yum.conf" \
-  "cat /etc/xinetd.conf" \
-  "cat /etinetd.conf" \
-  "cat /etc/ssh/ssh_config" \
-  "cat /etc/ssh/sshd_config" \
-  "cat /etc/rc.status" \
-  "cat /etc/inittab" \
-  "cat /etc/fstab" \
-  "cat /etc/chrony.conf" \
-  "cat /etc/sysconfig/chronyd" \
-  "cat /etc/vsftpd.conf" \
-  "cat /etc/vsftpd/vsftpd.conf" \
-  "cat /etc/audit/audit.rules" \
-  "cat /etc/bashrc" \
-  "cat /etc/profile" \
-  "cat /etc/ftpaccess" \
-  "cat /etc/audit/auditd.conf" \
-  "cat /etc/security/console.perms" \
-  "cat /etc/vsftpd.ftpusers" \
-  "cat /etc/crontab" \
-  "cat /etc/init.d/syslog" \
-  "cat /etc/csh.login" \
-  "cat /etc/bash.bashrc" \
-  "cat /etc/default/useradd" \
-  "cat /etc/permissions.local" \
-  "cat /etc/selinux/config" \
-  "cat /etc/modprobe.conf" \
-  "cat /etc/rsyslog.conf" \
-  "cat /etc/audit/auditd.conf" \
-  "cat /etc/audit/audit.rules" \
-  "cat /etc/sudoers" \
-  "cat /etc/anacrontab" \
-  "cat /etc/ssh/sshd_config" \
-  "cat /etc/pam.d/system-auth" \
-  "cat /etc/pam.d/sshd" \
-  "cat /etc/pam.d/su" \
-  "cat /etc/gdm3/greeter.dconf-defaults" \
+  # Banners, motd...
   "cat /etc/issue" \
   "cat /etc/issue.net" \
   "cat /etc/motd" \
-  "cat /usr/share/gdm/themes/RHEL/RHEL.xml" \
-  "cat /etc/aide.conf" \
-  "cat /etc/snmp/snmpd.conf" \
-  "cat /etc/sysconfig/SuSEfirewall2" \
-  "cat /etc/logrotate.conf" \
-  "cat /etc/avahi/avahi-daemon.conf" \
-  "cat /etc/exports" \
-  "cat /etc/mail/sendmail.cf" \
-  "cat /etc/gdm/custom.conf" \
-  "cat /etc/gdm/defaults.conf" \
-  "cat /etc/sysctl.conf" \
-  "cat /etc/syslog.conf" \
-  "cat /etc/yum.conf" \
-  "cat /etc/login.defs" \
-  "cat /etc/aide.conf" \
-  "cat /etc/group" \
-  "cat /etc/sudoers" \
-  "cat /etc/libuser.conf" \
-  "cat /etc/default/useradd" \
-  "cat /etc/gdm/custom.conf" \
-  "cat /etc/logwatch/conf/logwatch.conf" \
-  "cat /usr/lib/systemd/system/rescue.service"
-  "cat /usr/lib/systemd/system/emergency.service" \
-  "cat /etc/lvm/lvm.conf" \
-  "cat /etc/init.d/ntp" \
-  "cat /etc/default/rsync" \
-  "cat /etc/cluster/cluster.conf" \
-  "cat /etc/httpd.conf" \
-  "cat /etc/apache.conf" \
-  "cat /etc/apache2.conf" \
-  "cat /etc/httpd/apache.conf" \
-  "cat /usr/local/apache/apache.conf" \
-  "cat /etc/apache/apache.conf" \
-  "cat /etc/apache2/apache.conf" \
-  "cat /usr/local/etc/apache22/apache.conf" \
-  "cat /etc/httpd/conf/apache.conf" \
-  "cat /etc/httpd/apache2.conf" \
-  "cat /usr/local/apache/apache2.conf" \
-  "cat /etc/apache/apache2.conf" \
-  "cat /etc/apache2/apache2.conf" \
-  "cat /usr/local/etc/apache22/apache2.conf" \
-  "cat /etc/httpd/conf/apache2.conf" \
-  "cat /etc/httpd/httpd.conf" \
-  "cat /usr/local/apache/httpd.conf" \
-  "cat /etc/apache/httpd.conf" \
-  "cat /etc/apache2/httpd.conf" \
-  "cat /usr/local/etc/apache22/httpd.conf" \
-  "cat /etc/httpd/conf/httpd.conf" \
-  "cat /etc/apache2/mods-enabled/" \
+
 )
 
 ###############################################################################
@@ -172,17 +89,87 @@ FS_STACK=(\
 # It contains tasks related directly to the permissions.
 
 PERMISSIONS_STACK=(\
-  "awk -F: '(\$3 == 0 ) { print \$1 }' /etc/passwd" \
-  "awk -F: '{print \$1 \":\" \$3 \":\" \$7}' /etc/passwd" \
-  # "find / -perm -04000 -o -perm -02000 -type f | sort" \
-  # "find / -type d \( -perm -0002 -a ! -perm -1000 \)" \
+
+  ### FILESYSTEM ###
+  "ls -l /tmp" \
+  "ls -l /etc/rc*.d" \
+  "_stat /etc/hosts.allow" \
+  "_stat /etc/hosts.deny" \
+  # "_stat /boot/grub/{grub.conf,grub.cfg}" \
+  "_stat /boot/grub/grub.cfg" \
+  "_stat /etc/securetty" \
+  "_stat /etc/inittab" \
+  "_stat /etc/fstab" \
+  "_stat /etc/bashrc" \
+  "_stat /etc/profile" \
+  "_stat /etc/default/useradd" \
+  "_stat /etc/sysctl.conf" \
+  "ls -ZR /dev/* | grep unlabeled_t" \
+
+  # Enable if you have a lot of time...
+  # "find / -type f -perm -04000 -o -perm -02000 | sort" \
+  # "find / -type d \( -perm -0002 -a ! -perm -1000 \) | sort" \
   # "find / -nouser -o -nogroup -print" \
-  # "ls -laR /" \
-  # "ls -laRZ /" \
+
+  ### LIMITS
+  "_grep \"hard core\" /etc/security/limits.conf" \
+  "_grep \"hard core\" /etc/security/limits.d/*" \
+
+  ### PAM INTERFACE ###
+  "_grep pam_wheel.so /etc/pam.d/su" \
+  "_grep wheel /etc/group" \
+  "_stat /etc/pam.d/system-auth" \
+  "_stat /etc/pam.d/sshd" \
+  "_stat /etc/pam.d/su" \
+
+  ### USERS/GROUPS ###
+  "_stat /etc/passwd" \
+  "_stat /etc/shadow" \
+  "_stat /etc/gshadow" \
+  "_stat /etc/group" \
+  "_stat /etc/login.defs" \
+  "_stat /etc/sudoers" \
+
+  # Accounts listing.
+  "awk -F : '{print \$1 \":\" \$3 \":\" \$7}' /etc/passwd" \
+  # Accounts without passwords.
+  "awk -F : '(\$2 == \"\" )' /etc/shadow" \
+  # '+' entries.
+  "_grep '^+:' /etc/passwd" \
+  "_grep '^+:' /etc/shadow" \
+  "_grep '^+:' /etc/group" \
+
+  # Password expiration.
+  "_grep \"PASS_MIN_DAYS\|PASS_WARN_AGE\" /etc/login.defs | grep -v \"#\"" \
+  "chage --list operator" \
+  "chage --list nobody" \
+  # Root account.
+  "_grep \"^root\" /etc/passwd | cut -f4 -d:" \
+  # Check inactive accounts.
+  "useradd -D | grep INACTIVE " \
+
+  ### UMASK ###
+  # Users (global).
+  "_grep \"^UMASK=077\" /etc/bashrc" \
+  "_grep \"^umask=077\" /etc/bashrc" \
+
+  # Cron.
+  # "stat -c \"%a %u %g\" /etc/cron.d | egrep \".00 0 0\"" \
+  # "stat -c \"%a %u %g\" /etc/crontab | egrep \".00 0 0\"" \
+  # "stat -c \"%a %u %g\" /etc/cron.hourly | egrep \".00 0 0\"" \
+  # "stat -c \"%a %u %g\" /etc/cron.daily | egrep \".00 0 0\"" \
+  # "stat -c \"%a %u %g\" /etc/cron.weekly | egrep \".00 0 0\"" \
+  # "stat -c \"%a %u %g\" /etc/cron.monthly | egrep \".00 0 0\"" \
+  "_stat /etc/cron.d" \
+  "_stat /etc/crontab" \
+  "_stat /etc/cron.hourly" \
+  "_stat /etc/cron.daily" \
+  "_stat /etc/cron.weekly" \
+  "_stat /etc/cron.monthly" \
+
   # "ausearch -m AVC,USER_AVC -sv no" \
   # "getsebool -a " \
-  "ls -ZR /dev/* | grep unlabeled_t" \
-  # "find / -ls" \
+
 )
 
 ###############################################################################
@@ -192,7 +179,88 @@ PERMISSIONS_STACK=(\
 # It contains tasks related directly to the system services.
 
 SERVICES_STACK=(\
-  "ntpq -p" \
+
+  ### GLOBAL ###
+  # Services status (systemctl).
+  "service --status-all" \
+  "systemctl list-units" \
+
+  # Specific services.
+  # _systemctl <service_name>
+  "_systemctl rsync" \
+  "_systemctl avahi-daemon" \
+  "_systemctl cups" \
+  "_systemctl dhcpd" \
+  "_systemctl slapd" \
+  "_systemctl nfs" \
+  "_systemctl rpcbind" \
+  "_systemctl named" \
+  "_systemctl vsftpd" \
+  "_systemctl httpd" \
+  "_systemctl dovecot" \
+  "_systemctl smb" \
+  "_systemctl snmpd" \
+  "_systemctl auditd" \
+  "_systemctl rsyslog" \
+  "_systemctl syslog-nd" \
+
+  ### AUDITD ###
+  # Configuration.
+  "_grep max_log_file /etc/audit/auditd.conf" \
+  "_grep space_left_action /etc/audit/auditd.conf" \
+  "_grep action_mail_acct /etc/audit/auditd.conf" \
+  "_grep admin_space_left_action /etc/audit/auditd.conf" \
+  "_grep max_log_file_action /etc/audit/auditd.conf" \
+  "_grep time-change /etc/audit/audit.rules" \
+  "_grep identity /etc/audit/audit.rules" \
+  "_grep system-locale /etc/audit/audit.rules" \
+  "_grep MAC-policy /etc/audit/audit.rules" \
+  "_grep logins /etc/audit/audit.rules" \
+  "_grep session /etc/audit/audit.rules" \
+  "_grep perm_mod /etc/audit/audit.rules" \
+  "_grep access /etc/audit/audit.rules" \
+  "_grep mounts /etc/audit/audit.rules" \
+  "_grep delete /etc/audit/audit.rules" \
+  "_grep scope /etc/audit/audit.rules" \
+  "_grep actions /etc/audit/audit.rules" \
+  "_grep modules /etc/audit/audit.rules" \
+
+  ### SYSLOG ###
+  # Check remote log host.
+  "_grep \"^*.*[^I][^I]*@\" /etc/syslog.conf" \
+  # Permissions.
+  "ls -l /etc/rsyslog.conf" \
+  "ls -l /etc/syslog.conf" \
+
+  ### SSH ###
+  # Permissions.
+  "ls -l /etc/ssh" \
+  "_stat /etc/ssh/sshd_config" \
+  # Parameters.
+  "_grep \"^Protocol\" /etc/ssh/sshd_config" \
+  "_grep \"^LogLevel\" /etc/ssh/sshd_config" \
+  "_grep \"^X11Forwarding\" /etc/ssh/sshd_config" \
+  "_grep \"^MaxAuthTries\" /etc/ssh/sshd_config" \
+  "_grep \"^IgnoreRhosts\" /etc/ssh/sshd_config" \
+  "_grep \"^HostbasedAuthentication\" /etc/ssh/sshd_config" \
+  "_grep \"^PermitRootLogin\" /etc/ssh/sshd_config" \
+  "_grep \"^PermitEmptyPasswords\" /etc/ssh/sshd_config" \
+  "_grep \"^PermitUserEnvironment\" /etc/ssh/sshd_config" \
+  "_grep \"^Ciphers\" /etc/ssh/sshd_config" \
+  "_grep \"^MACs\" /etc/ssh/sshd_config" \
+  "_grep \"^ClientAliveInterval\" /etc/ssh/sshd_config" \
+  "_grep \"^ClientAliveCountMax\" /etc/ssh/sshd_config" \
+  "_grep \"^LoginGraceTime\" /etc/ssh/sshd_config" \
+  "_grep \"^AllowGroups\" /etc/ssh/sshd_config" \
+  "_grep \"^DenyUsers\" /etc/ssh/sshd_config" \
+  "_grep \"^DenyGroups\" /etc/ssh/sshd_config" \
+  "_grep \"^Banner\" /etc/ssh/sshd_config" \
+
+  ### NTP ###
+  "_stat /etc/ntp.conf" \
+  "_grep \"^restrict\" /etc/ntp.conf" \
+  "_grep \"^server\" /etc/ntp.conf" \
+
 )
 
 ###############################################################################
@@ -202,13 +270,15 @@ SERVICES_STACK=(\
 # It contains tasks related directly to the network stack.
 
 NETWORK_STACK=(\
+
   "hostname -f" \
   "ifconfig -a" \
   "iwconfig" \
   "netstat -tunap" \
   "netstat -rn" \
-  "lsof -ni"
   "iptables -nL -v" \
   "iptables -nL -v -t nat" \
   "iptables -S" \
+  "lsof -ni" \
+
 )
