updated SYSTEM and KERNEL stacks - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -33,7 +33,41 @@ SYSTEM_STACK=(\
   ### PROCESSES ###
   "_exec ps -auxenf" \
 
-  ### KERNEL ###
+  ### BOOTLOADER ###
+  "_grep \"^\s*linux\" /boot/grub/grub.*" \
+
+  ### HARDWARE ###
+  "_exec lspci" \
+
+  ### DISKS ###
+  "_exec lsblk" \
+  "_exec df -H" \
+  "_exec mount" \
+
+  ### SECURITY/HARDENING ###
+  # SELinux.
+  "_exec sestatus" \
+  # "fgrep \"SELINUX=enforcing\" /etc/selinux/* -R" \
+
+  # Banners, motd...
+  "cat /etc/issue" \
+  "cat /etc/issue.net" \
+  "cat /etc/motd" \
+
+)
+
+###############################################################################
+############################### KERNEL STACK ##################################
+###############################################################################
+
+# It contains tasks related directly to the kernel.
+
+KERNEL_STACK=(\
+
+  ### MODULES ###
+  "_exec lsmod" \
+
+  ### KERNEL PARAMS ###
   "_sysctl fs.suid_dumpable 1" \
   "_sysctl kernel.randomize_va_space 0" \
   "_sysctl net.ipv4.ip_forward 1" \
@@ -56,29 +90,6 @@ SYSTEM_STACK=(\
   "_sysctl net.ipv6.conf.default.accept_ra 1" \
   "_sysctl net.ipv6.conf.all.accept_redirects 1" \
   "_sysctl net.ipv6.conf.default.accept_redirects 1" \
-
-  "_exec lsmod" \
-
-  ### BOOTLOADER ###
-  "_grep \"^\s*linux\" /boot/grub/grub.*" \
-
-  ### HARDWARE ###
-  "_exec lspci" \
-
-  ### DISKS ###
-  "_exec lsblk" \
-  "_exec df -H" \
-  "_exec mount" \
-
-  ### SECURITY/HARDENING ###
-  # SELinux.
-  "_exec sestatus" \
-  # "fgrep \"SELINUX=enforcing\" /etc/selinux/* -R" \
-
-  # Banners, motd...
-  "cat /etc/issue" \
-  "cat /etc/issue.net" \
-  "cat /etc/motd" \
 
 )
 
