updated config files - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/centos-linux.conf
+++ b/etc/centos-linux.conf
@@ -5,26 +5,26 @@
 CENTOS_STACK=(\
 
   # Packages integrity.
-  "rpm -qVa | awk '\$2 != "c" { print \$0 }'" \
+  "_exec rpm -qVa | awk '\$2 != "c" { print \$0 }'" \
   # Check gpgcheck is activated.
   "_grep gpgcheck /etc/yum.conf" \
   "_grep ^gpgcheck /etc/yum.repos.d/" \
   # RedHat GPG Key.
-  "rpm -q --queryformat \"%{SUMMARY}\n\" gpg-pubkey" \
+  "_exec rpm -q --queryformat \"%{SUMMARY}\n\" gpg-pubkey" \
   # Check umask.
   "_grep umask /etc/sysconfig/init" \
   # Check syslog for accept remote.
   "_grep SYSLOGD_OPTIONS /etc/sysconfig/syslog" \
 
   ### SERVICES ###
-  "chkconfig --list" \
+  "_exec chkconfig --list" \
 
   ### PACKAGES ###
-  "rpm -q setroubleshoot" \
-  "rpm -q prelink" \
-  "rpm -q mcstrans" \
-  "rpm -q libselinux" \
-  "rpm -qa xorg-x11*" \
-  "rpm -q iptables" \
+  "_exec rpm -q setroubleshoot" \
+  "_exec rpm -q prelink" \
+  "_exec rpm -q mcstrans" \
+  "_exec rpm -q libselinux" \
+  "_exec rpm -qa xorg-x11*" \
+  "_exec rpm -q iptables" \
 
 )
