--- a/etc/debian-linux.conf
+++ b/etc/debian-linux.conf
@@ -12,11 +12,11 @@ DEBIAN_STACK=(\
   ### SERVICES ###
 
   ### PACKAGES ###
-  "dpkg -l | grep setroubleshoot" \
-  "dpkg -l | grep prelink" \
-  "dpkg -l | grep mcstrans" \
-  "dpkg -l | grep libselinux" \
-  "dpkg -l | grep xorg-x11*" \
-  "dpkg -l | grep iptables" \
+  "_exec dpkg -l | grep setroubleshoot" \
+  "_exec dpkg -l | grep prelink" \
+  "_exec dpkg -l | grep mcstrans" \
+  "_exec dpkg -l | grep libselinux" \
+  "_exec dpkg -l | grep xorg-x11*" \
+  "_exec dpkg -l | grep iptables" \
 
 )
