--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -10,10 +10,10 @@ source "${_etc}/debian-linux.conf"
 EXTERNAL_STACK=(\
 
   # From centos-linux.conf.
-  "${CENTOS_STACK[@]}" \
+  # "${CENTOS_STACK[@]}" \
 
   # From debian-linux.conf.
-  "${DEBIAN_STACK[@]}" \
+  # "${DEBIAN_STACK[@]}" \
 
 )
 
@@ -50,9 +50,9 @@ SYSTEM_STACK=(\
   # "fgrep \"SELINUX=enforcing\" /etc/selinux/* -R" \
 
   # Banners, motd...
-  "cat /etc/issue" \
-  "cat /etc/issue.net" \
-  "cat /etc/motd" \
+  "_exec cat /etc/issue" \
+  "_exec cat /etc/issue.net" \
+  "_exec cat /etc/motd" \
 
 )
 
@@ -102,8 +102,8 @@ KERNEL_STACK=(\
 PERMISSIONS_STACK=(\
 
   ### FILESYSTEM ###
-  "ls -l /tmp" \
-  "ls -l /etc/rc*.d" \
+  "_exec ls -l /tmp" \
+  "_exec ls -l /etc/rc*.d" \
   "_stat /etc/hosts.allow" \
   "_stat /etc/hosts.deny" \
   # "_stat /boot/grub/{grub.conf,grub.cfg}" \
@@ -115,7 +115,7 @@ PERMISSIONS_STACK=(\
   "_stat /etc/profile" \
   "_stat /etc/default/useradd" \
   "_stat /etc/sysctl.conf" \
-  "ls -ZR /dev/* | grep unlabeled_t" \
+  # "_exec ls -ZR /dev/* | grep unlabeled_t" \
 
   # Enable if you have a lot of time...
   # "find / -type f -perm -04000 -o -perm -02000 | sort" \
@@ -142,9 +142,9 @@ PERMISSIONS_STACK=(\
   "_stat /etc/sudoers" \
 
   # Accounts listing.
-  "awk -F : '{print \$1 \":\" \$3 \":\" \$7}' /etc/passwd" \
+  "_exec awk -F : '{print \$1 \":\" \$3 \":\" \$7}' /etc/passwd" \
   # Accounts without passwords.
-  "awk -F : '(\$2 == \"\" )' /etc/shadow" \
+  "_exec awk -F : '(\$2 == \"\" )' /etc/shadow" \
   # '+' entries.
   "_grep '^+:' /etc/passwd" \
   "_grep '^+:' /etc/shadow" \
@@ -152,12 +152,12 @@ PERMISSIONS_STACK=(\
 
   # Password expiration.
   "_grep \"PASS_MIN_DAYS\|PASS_WARN_AGE\" /etc/login.defs | grep -v \"#\"" \
-  "chage --list operator" \
-  "chage --list nobody" \
+  "_exec chage --list operator" \
+  "_exec chage --list nobody" \
   # Root account.
   "_grep \"^root\" /etc/passwd | cut -f4 -d:" \
   # Check inactive accounts.
-  "useradd -D | grep INACTIVE " \
+  "_exec useradd -D | grep INACTIVE " \
 
   ### UMASK ###
   # Users (global).
@@ -193,8 +193,8 @@ SERVICES_STACK=(\
 
   ### GLOBAL ###
   # Services status (systemctl).
-  "service --status-all" \
-  "systemctl list-units" \
+  "_exec service --status-all" \
+  "_exec systemctl list-units" \
 
   # Specific services.
   # _systemctl <service_name>
@@ -240,12 +240,12 @@ SERVICES_STACK=(\
   # Check remote log host.
   "_grep \"^*.*[^I][^I]*@\" /etc/syslog.conf" \
   # Permissions.
-  "ls -l /etc/rsyslog.conf" \
-  "ls -l /etc/syslog.conf" \
+  "_exec ls -l /etc/rsyslog.conf" \
+  "_exec ls -l /etc/syslog.conf" \
 
   ### SSH ###
   # Permissions.
-  "ls -l /etc/ssh" \
+  "_exec ls -l /etc/ssh" \
   "_stat /etc/ssh/sshd_config" \
   # Parameters.
   "_grep \"^Protocol\" /etc/ssh/sshd_config" \
@@ -282,14 +282,14 @@ SERVICES_STACK=(\
 
 NETWORK_STACK=(\
 
-  "hostname -f" \
-  "ifconfig -a" \
-  "iwconfig" \
-  "netstat -tunap" \
-  "netstat -rn" \
-  "iptables -nL -v" \
-  "iptables -nL -v -t nat" \
-  "iptables -S" \
-  "lsof -ni" \
+  "_exec hostname -f" \
+  "_exec ifconfig -a" \
+  "_exec iwconfig" \
+  "_exec netstat -tunap" \
+  "_exec netstat -rn" \
+  "_exec iptables -nL -v" \
+  "_exec iptables -nL -v -t nat" \
+  "_exec iptables -S" \
+  "_exec lsof -ni" \
 
 )
