updated otseca conf, minor fixes - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/otseca.conf
+++ b/etc/otseca.conf
@@ -3,19 +3,25 @@
 ###############################################################################
 
 # Include your specific config file.
-source "${_etc}/centos-linux.conf"
-source "${_etc}/debian-linux.conf"
+# source "${_etc}/your-config.conf"
 
 # Add 'YOUR_STACK' from included config file.
 EXTERNAL_STACK=(\
 
-  # From centos-linux.conf.
-  # "${CENTOS_STACK[@]}" \
-
-  # From debian-linux.conf.
-  # "${DEBIAN_STACK[@]}" \
+  # From your-config.conf.
+  # "${YOUR_STACK[@]}" \
 
 )
+
+###############################################################################
+############################# DISTRIUBTIONS STACK #############################
+###############################################################################
+
+# Include specific distribution config file.
+source "${_etc}/centos-linux.conf"
+source "${_etc}/debian-linux.conf"
+
+# Add distribution stack in __init__ (+549 line) file.
 
 ###############################################################################
 ############################### SYSTEM STACK ##################################
@@ -27,6 +33,7 @@ SYSTEM_STACK=(\
 
   ### STANDARD ###
   "_exec uname -a" \
+  "_exec uptime" \
   "_exec lsb_release -a" \
   "_exec cat /proc/cpuinfo" \
 
@@ -47,12 +54,17 @@ SYSTEM_STACK=(\
   ### SECURITY/HARDENING ###
   # SELinux.
   "_exec sestatus" \
-  # "fgrep \"SELINUX=enforcing\" /etc/selinux/* -R" \
+  # "_grep \"SELINUX=enforcing\" /etc/selinux/* -R" \
 
   # Banners, motd...
   "_exec cat /etc/issue" \
   "_exec cat /etc/issue.net" \
   "_exec cat /etc/motd" \
+
+  ### USERS/GROUPS ###
+  # For root user.
+  "_exec printenv" \
+  "_exec crontab -u root -l" \
 
 )
 
@@ -163,6 +175,7 @@ PERMISSIONS_STACK=(\
   # Users (global).
   "_grep \"^UMASK=077\" /etc/bashrc" \
   "_grep \"^umask=077\" /etc/bashrc" \
+  "_grep \"umask *[0-7]\" /etc/profile" \
 
   # Cron.
   # "stat -c \"%a %u %g\" /etc/cron.d | egrep \".00 0 0\"" \
@@ -271,6 +284,20 @@ SERVICES_STACK=(\
   "_stat /etc/ntp.conf" \
   "_grep \"^restrict\" /etc/ntp.conf" \
   "_grep \"^server\" /etc/ntp.conf" \
+
+  ### GRUB ###
+  "_grep \"^password\" /etc/grub.conf" \
+
+  ### LOGROTATE ###
+  "_grep \"{\" /etc/logrotate.d/syslog" \
+
+  ### APACHE/HTTPD ###
+  "_exec find /etc/httpd/ -name \".conf\" -print" \
+  "_exec find /etc/httpd/ -name \".load\" -print" \
+  "_exec find /etc/apache/ -name \".conf\" -print" \
+  "_exec find /etc/apache/ -name \".load\" -print" \
+  "_exec apachectl -S" \
+  "_exec apachectl -M" \
 
 )
 
