updated distro config files - signed-off-by: trimstray <trimstray@gmail.com>

--- a/etc/centos-linux.conf
+++ b/etc/centos-linux.conf
@@ -4,6 +4,11 @@
 
 CENTOS_STACK=(\
 
+  # System info.
+  "_exec cat /etc/redhat-release" \
+  "_exec cat /etc/centos-release" \
+  # Check umask.
+  "_grep umask /etc/sysconfig/init" \
   # Packages integrity.
   "_exec rpm -qVa | awk '\$2 != "c" { print \$0 }'" \
   # Check gpgcheck is activated.
@@ -26,5 +31,8 @@ CENTOS_STACK=(\
   "_exec rpm -q libselinux" \
   "_exec rpm -qa xorg-x11*" \
   "_exec rpm -q iptables" \
+  "_exec yum repolist" \
+  "_exec yum list installed" \
+  "_exec yum check-update" \
 
 )
