--- a/etc/debian-linux.conf
+++ b/etc/debian-linux.conf
@@ -4,19 +4,20 @@
 
 DEBIAN_STACK=(\
 
-  # Check umask.
-  "_grep umask /etc/sysconfig/init" \
-  # Check syslog for accept remote.
-  "_grep SYSLOGD_OPTIONS /etc/sysconfig/syslog" \
+  # System info.
+  "_exec cat /etc/debian-release" \
+  "_exec cat /etc/debian_version" \
 
   ### SERVICES ###
 
   ### PACKAGES ###
-  "_exec dpkg -l | grep setroubleshoot" \
-  "_exec dpkg -l | grep prelink" \
-  "_exec dpkg -l | grep mcstrans" \
-  "_exec dpkg -l | grep libselinux" \
-  "_exec dpkg -l | grep xorg-x11*" \
-  "_exec dpkg -l | grep iptables" \
+  "_exec dpkg-query -f \"setroubleshoot\"" \
+  "_exec dpkg-query -f \"prelink\"" \
+  "_exec dpkg-query -f \"mcstrans\"" \
+  "_exec dpkg-query -f \"libselinux\"" \
+  "_exec dpkg-query -f \"xorg-x11*\"" \
+  "_exec dpkg-query -f \"iptables\"" \
+  "_exec dpkg -l" \
+  "_exec apt-get --just-print upgrade" \
 
 )
